--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Flytt utførte sjekklisteelementer til bunnen</string>
     <string name="add_new_checklist_items_top">Legg til nye sjekklisteelementer på toppen</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Sjekkliste</string>
     <string name="checklists">Sjekklister</string>
     <string name="add_new_checklist_item">Legg til nytt sjekklisteelement</string>
