--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Преместване на готовите елементи от контролния списък в долната част</string>
     <string name="add_new_checklist_items_top">Добавяне на нови елементи от контролния списък в горната част</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Контролен списък</string>
     <string name="checklists">Контролни списъци</string>
     <string name="add_new_checklist_item">Добавяне на нов елемент от контролния списък</string>
