--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Mou els elements fets de la llista de comprovació a la part inferior</string>
     <string name="add_new_checklist_items_top">Afegeix els elements nous de la llista de comprovació a la part superior</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Llista de comprovació</string>
     <string name="checklists">Llistes de comprovació</string>
     <string name="add_new_checklist_item">Afegeix un element nou de la llista de comprovació</string>
