--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Přesunout splněné položky seznamu dospodu</string>
     <string name="add_new_checklist_items_top">Přidávat nové položky seznamu nahoru</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Seznam položek</string>
     <string name="checklists">Seznamy položek</string>
     <string name="add_new_checklist_item">Přidat do seznamu novou položku</string>
