--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Flyt færdige tjeklistepunkter til bunden</string>
     <string name="add_new_checklist_items_top">Tilføj nye tjeklistepunkter øverst</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Tjekliste</string>
     <string name="checklists">Tjeklister</string>
     <string name="add_new_checklist_item">Føj et nyt punkt til tjeklisten</string>
