--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Erledigte Checklistenpunkte ans Ende verschieben</string>
     <string name="add_new_checklist_items_top">Neue Checklistenpunkte am Anfang hinzufügen</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Checkliste</string>
     <string name="checklists">Checklisten</string>
     <string name="add_new_checklist_item">Einen neuen Checklistenpunkt hinzufügen</string>
