--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Μετακίνηση ανεπιτυχών λίστας ελέγχου στην κορυφή</string>
     <string name="add_new_checklist_items_top">Προσθήκη νέων στοιχείων λίστας ελέγχου στην κορυφή</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Λίστα ελέγχου</string>
     <string name="checklists">Λίστες ελέγχου</string>
     <string name="add_new_checklist_item">Προσθήκη νέου στοιχείου λίστας ελέγχου</string>
