--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">جابه‌جایی موارد انجام شده فهرست نشان‌دار به پایین</string>
     <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">فهرست نشان‌دار</string>
     <string name="checklists">Checklists</string>
     <string name="add_new_checklist_item">افزودن یک مورد به فهرست نشان‌دار</string>
