--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Mover os elementos dunha lista de verificación non rematada a arriba</string>
     <string name="add_new_checklist_items_top">Engade novos elementos da lista de verificación na parte superior</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Lista de verificación</string>
     <string name="checklists">Listas de verificación</string>
     <string name="add_new_checklist_item">Engadir un elemento a unha nova lista de verificación</string>
