--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Premjesti gotove stavke popisa na kraj</string>
     <string name="add_new_checklist_items_top">Dodaj nove stavke na vrh popisa</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Popis zadataka</string>
     <string name="checklists">Popisi zadataka</string>
     <string name="add_new_checklist_item">Dodaj novu stavku u popis zadataka</string>
