--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Kész ellenőrzőlista-elemek alulra helyezése</string>
     <string name="add_new_checklist_items_top">Új ellenőrzőlista-elemek felülre helyezése</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Ellenőrzőlista</string>
     <string name="checklists">Ellenőrzőlisták</string>
     <string name="add_new_checklist_item">Új ellenőrzőlista-elem hozzáadása</string>
