--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Pindah checklist yang belum selesai ke urutan atas</string>
     <string name="add_new_checklist_items_top">Tambahkan item daftar periksa baru pada atas</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Daftar periksa</string>
     <string name="checklists">Daftar periksa</string>
     <string name="add_new_checklist_item">Tambah item checklist baru</string>
