--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">チェックリストの未完了リストを上に移動</string>
     <string name="add_new_checklist_items_top">新しいチェックリスト項目を上部に追加</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">チェックリスト</string>
     <string name="checklists">チェックリスト</string>
     <string name="add_new_checklist_item">新しいチェックリスト項目を追加</string>
