--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
     <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Kontrolinis sąrašas</string>
     <string name="checklists">Checklists</string>
     <string name="add_new_checklist_item">Pridėti naują kontrolinio sąrašo objektą</string>
