--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Przesuwaj na dół wykonane elementy listy kontrolnej</string>
     <string name="add_new_checklist_items_top">Dodawaj na górze nowe elementy listy kontrolnej</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Lista kontrolna</string>
     <string name="checklists">Listy kontrolne</string>
     <string name="add_new_checklist_item">Dodaj nowy element listy kontrolnej</string>
