--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">Tamamlanan yapılacak listesi ögelerini en alta taşı</string>
     <string name="add_new_checklist_items_top">Yeni yapılacak listesi ögelerini en üste taşı</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">Yapılacak listesi</string>
     <string name="checklists">Yapılacak listeleri</string>
     <string name="add_new_checklist_item">Yeni bir yapılacak listesi ögesi ekle</string>
