--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -62,6 +62,8 @@
     <string name="move_done_checklist_items">將未完成的核對清單項目移動至頂端</string>
     <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
     <!-- Checklists -->
+    <string name="show_numbered_items">Show items position</string>
+    <string name="hide_numbered_items">Hide items position</string>
     <string name="checklist">核對清單</string>
     <string name="checklists">Checklists</string>
     <string name="add_new_checklist_item">新增新的核對清單項目</string>
