--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -24,6 +24,8 @@
     <string name="text_note">Notatka tekstowa</string>
     <string name="lock_note">Zablokuj notatkę</string>
     <string name="unlock_note">Odblokuj notatkę</string>
+    <string name="unlock_notes">Unlock notes</string>
+    <string name="found_locked_notes_info">The following notes are locked. You can either unlock them one by one or tap \"OK\" to skip exporting locked notes.</string>
     <string name="note_content_locked">Treść notatki jest zablokowana.</string>
     <string name="show_content">Pokaż zawartość</string>
     <string name="locking_warning">OSTRZEŻENIE: Jeśli zapomnisz hasła do notatki, nie będziesz już mógł/mogła jej odzyskać ani uzyskać dostępu do treści notatki.</string>
