--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -68,7 +68,7 @@
     <string name="add_new_checklist_items">Ajouter de nouveaux éléments</string>
     <string name="checklist_is_empty">La liste de contrôle est vide</string>
     <string name="remove_done_items">Supprimer les éléments cochés</string>
-    <string name="add_to_the_top">Add to the top</string>
+    <string name="add_to_the_top">Ajouter en haut de la liste</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Exporter toutes les notes en tant que fichiers</string>
     <string name="import_folder">Importer depuis un dossier</string>
