--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -77,6 +77,7 @@
     <string name="export_notes">Експортиране на всички бележки</string>
     <string name="import_notes">Бележки за внос</string>
     <string name="import_notes_pro">Бележки за внос (Pro)</string>
+    <string name="cant_load_files_over_internet">Simple Notes can not load files over the internet</string>
     <!-- FAQ -->
     <string name="faq_1_title">Как мога да променя цвета на приспособлението\?</string>
     <string name="faq_1_text">В случай че имате само 1 активна джаджа, можете да я създадете отново или да използвате бутона в настройките на приложението за персонализирането ѝ. Ако имате няколко активни уиджета, бутонът в настройките на приложението няма да бъде достъпен. Тъй като приложението поддържа персонализиране на цвета за всяка джаджа, ще трябва да пресъздадете джаджата, която искате да персонализирате.</string>
