--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -77,6 +77,7 @@
     <string name="export_notes">Exportar todas as notas</string>
     <string name="import_notes">Importar notas</string>
     <string name="import_notes_pro">Importar notas (Pro)</string>
+    <string name="cant_load_files_over_internet">Simple Notes can not load files over the internet</string>
     <!-- FAQ -->
     <string name="faq_1_title">Posso alterar a cor do widget\?</string>
     <string name="faq_1_text">Se apenas tiver um widget ativo, pode recriar ou utilizar o botão nas definições para o personalizar. Se tiver vários widgets, este botão não estará disponível. Como cada um dos widgets pode ser personalizado, terá que os recriar sempre que os quiser personalizar.</string>
