--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -77,6 +77,7 @@
     <string name="export_notes">Exportar todalas notas</string>
     <string name="import_notes">Import notes</string>
     <string name="import_notes_pro">Importar notas (Pro)</string>
+    <string name="cant_load_files_over_internet">Simple Notes can not load files over the internet</string>
     <!-- FAQ -->
     <string name="faq_1_title">Como podo cambiala cor dos widgets\?</string>
     <string name="faq_1_text">No caso de que teñas só un widget activo, podes crealo de novo ou usar o botón nos axustes do app para personalizalo.</string>
